CD_Lab9/3_Add_Code/adc.output
Grammar

    0 $accept: exp $end

    1 exp: E

    2 E: E '+' T
    3  | E '-' T
    4  | T

    5 T: T '*' F
    6  | F '/' F
    7  | T '%' F
    8  | F

    9 F: '(' E ')'
   10  | NUMBER
   11  | ID


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 7
    '(' (40) 9
    ')' (41) 9
    '*' (42) 5
    '+' (43) 2
    '-' (45) 3
    '/' (47) 6
    error (256)
    NUMBER (258) 10
    ID (259) 11


Nonterminals, with rules where they appear

    $accept (12)
        on left: 0
    exp (13)
        on left: 1
        on right: 0
    E (14)
        on left: 2 3 4
        on right: 1 2 3 9
    T (15)
        on left: 5 6 7 8
        on right: 2 3 4 5 7
    F (16)
        on left: 9 10 11
        on right: 5 6 7 8


State 0

    0 $accept: . exp $end

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2
    '('     shift, and go to state 3

    exp  go to state 4
    E    go to state 5
    T    go to state 6
    F    go to state 7


State 1

   10 F: NUMBER .

    $default  reduce using rule 10 (F)


State 2

   11 F: ID .

    $default  reduce using rule 11 (F)


State 3

    9 F: '(' . E ')'

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2
    '('     shift, and go to state 3

    E  go to state 8
    T  go to state 6
    F  go to state 7


State 4

    0 $accept: exp . $end

    $end  shift, and go to state 9


State 5

    1 exp: E .
    2 E: E . '+' T
    3  | E . '-' T

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11

    $default  reduce using rule 1 (exp)


State 6

    4 E: T .
    5 T: T . '*' F
    7  | T . '%' F

    '*'  shift, and go to state 12
    '%'  shift, and go to state 13

    $default  reduce using rule 4 (E)


State 7

    6 T: F . '/' F
    8  | F .

    '/'  shift, and go to state 14

    $default  reduce using rule 8 (T)


State 8

    2 E: E . '+' T
    3  | E . '-' T
    9 F: '(' E . ')'

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11
    ')'  shift, and go to state 15


State 9

    0 $accept: exp $end .

    $default  accept


State 10

    2 E: E '+' . T

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2
    '('     shift, and go to state 3

    T  go to state 16
    F  go to state 7


State 11

    3 E: E '-' . T

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2
    '('     shift, and go to state 3

    T  go to state 17
    F  go to state 7


State 12

    5 T: T '*' . F

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2
    '('     shift, and go to state 3

    F  go to state 18


State 13

    7 T: T '%' . F

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2
    '('     shift, and go to state 3

    F  go to state 19


State 14

    6 T: F '/' . F

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2
    '('     shift, and go to state 3

    F  go to state 20


State 15

    9 F: '(' E ')' .

    $default  reduce using rule 9 (F)


State 16

    2 E: E '+' T .
    5 T: T . '*' F
    7  | T . '%' F

    '*'  shift, and go to state 12
    '%'  shift, and go to state 13

    $default  reduce using rule 2 (E)


State 17

    3 E: E '-' T .
    5 T: T . '*' F
    7  | T . '%' F

    '*'  shift, and go to state 12
    '%'  shift, and go to state 13

    $default  reduce using rule 3 (E)


State 18

    5 T: T '*' F .

    $default  reduce using rule 5 (T)


State 19

    7 T: T '%' F .

    $default  reduce using rule 7 (T)


State 20

    6 T: F '/' F .

    $default  reduce using rule 6 (T)
